--- a/css-files/styles.css
+++ b/css-files/styles.css
@@ -4,7 +4,8 @@ body {
 h1 {
     color: blue;
     border: 2px solid purple;
-    padding: 30px;
+    margin: 50px;
+    /* padding: 30px; */
 }
 p {
     color: #ff0000;
