--- a/css-files/styles.css
+++ b/css-files/styles.css
@@ -5,7 +5,7 @@ h1 {
     color: blue;
     border: 2px solid purple;
     margin: 50px;
-    /* padding: 30px; */
+    padding: 30px;
 }
 p {
     color: #ff0000;
