--- a/css-files/cupcake-styles.css
+++ b/css-files/cupcake-styles.css
@@ -1,12 +1,34 @@
 body {
     background-color:peachpuff;
+    font-family: Arial, Helvetica, sans-serif
 }
 h1 {
-    color: blue;
-    border: 2px solid purple;
+    color: darkblue;
+    border: 20px solid purple;
     margin: 50px;
     padding: 30px;
+    text-align: center;
+    font-size: 80px;
 }
+
+h2 {
+    font-size: 35px;
+    color: brown;
+}
+
+.step {
+    border: 10px solid brown;
+    color: rgb(26, 92, 92);
+}
+
+.box {
+    border: 3px solid black;
+    padding: 10px;
+    margin: 5px;
+    font-size: 15px;
+    text-align: center;
+}
+
 p {
     color: #ff0000;
 }
